Fix horizontal scroll on collections page

--- a/src/app/collections/collections.module.css
+++ b/src/app/collections/collections.module.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
     grid-template-columns: 1fr;
-    width: 100%;
+    /* width: 100%; */
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -35,6 +35,7 @@
     margin-top: 4rem;
     text-decoration: underline var(--pale-orange) 4px;
     text-decoration-line: underline;
+    text-decoration-color: var(--pale-orange);
     text-decoration-skip-ink: none;
 
     @media (max-width: 721px) {
